--- a/autom4te.cache/traces.2
+++ b/autom4te.cache/traces.2
@@ -1,10 +1,9 @@
-m4trace:aclocal.m4:1179: -1- m4_include([m4/libtool.m4])
-m4trace:aclocal.m4:1180: -1- m4_include([m4/ltoptions.m4])
-m4trace:aclocal.m4:1181: -1- m4_include([m4/ltsugar.m4])
-m4trace:aclocal.m4:1182: -1- m4_include([m4/ltversion.m4])
-m4trace:aclocal.m4:1183: -1- m4_include([m4/lt~obsolete.m4])
-m4trace:aclocal.m4:1184: -1- m4_include([acinclude.m4])
-m4trace:acinclude.m4:48: -1- m4_pattern_forbid([^_?(BOOST|Boost)_])
+m4trace:aclocal.m4:1182: -1- m4_include([m4/libtool.m4])
+m4trace:aclocal.m4:1183: -1- m4_include([m4/ltoptions.m4])
+m4trace:aclocal.m4:1184: -1- m4_include([m4/ltsugar.m4])
+m4trace:aclocal.m4:1185: -1- m4_include([m4/ltversion.m4])
+m4trace:aclocal.m4:1186: -1- m4_include([m4/lt~obsolete.m4])
+m4trace:aclocal.m4:1187: -1- m4_include([acinclude.m4])
 m4trace:configure.ac:13: -1- AC_INIT([justniffer], [0.5.12], [info@plecno.com])
 m4trace:configure.ac:13: -1- m4_pattern_forbid([^_?A[CHUM]_])
 m4trace:configure.ac:13: -1- m4_pattern_forbid([_AC_])
@@ -159,7 +158,7 @@ m4trace:configure.ac:14: -1- AH_OUTPUT([JUSTNIFFER_VERSION], [/* justniffer vers
 @%:@undef JUSTNIFFER_VERSION])
 m4trace:configure.ac:16: -1- AM_INIT_AUTOMAKE
 m4trace:configure.ac:16: -1- m4_pattern_allow([^AM_[A-Z]+FLAGS$])
-m4trace:configure.ac:16: -1- AM_AUTOMAKE_VERSION([1.14.1])
+m4trace:configure.ac:16: -1- AM_AUTOMAKE_VERSION([1.15])
 m4trace:configure.ac:16: -1- AC_REQUIRE_AUX_FILE([install-sh])
 m4trace:configure.ac:16: -1- AC_SUBST([INSTALL_PROGRAM])
 m4trace:configure.ac:16: -1- AC_SUBST_TRACE([INSTALL_PROGRAM])
@@ -262,7 +261,7 @@ m4trace:configure.ac:17: -1- m4_pattern_allow([^HAVE_LIB_PCAP$])
 m4trace:configure.ac:17: -1- AH_OUTPUT([HAVE_LIB_PCAP], [/* has not libcap */
 @%:@undef HAVE_LIB_PCAP])
 m4trace:configure.ac:18: -1- _m4_warn([obsolete], ['AM_CONFIG_HEADER': this macro is obsolete.
-You should use the 'AC_CONFIG_HEADERS' macro instead.], [aclocal.m4:744: AM_CONFIG_HEADER is expanded from...
+You should use the 'AC_CONFIG_HEADERS' macro instead.], [aclocal.m4:747: AM_CONFIG_HEADER is expanded from...
 configure.ac:18: the top level])
 m4trace:configure.ac:18: -1- AC_CONFIG_HEADERS([include/config.h])
 m4trace:configure.ac:21: -1- AM_INIT_AUTOMAKE([-Wall -Werror])
@@ -673,69 +672,55 @@ m4trace:configure.ac:54: -1- AC_SUBST_TRACE([LD])
 m4trace:configure.ac:54: -1- m4_pattern_allow([^LD$])
 m4trace:configure.ac:55: -2- AC_DEFINE_TRACE_LITERAL([HAVE_LIB_PCAP])
 m4trace:configure.ac:55: -2- m4_pattern_allow([^HAVE_LIB_PCAP$])
-m4trace:configure.ac:57: -1- AC_SUBST([BOOST_ROOT])
-m4trace:configure.ac:57: -1- AC_SUBST_TRACE([BOOST_ROOT])
-m4trace:configure.ac:57: -1- m4_pattern_allow([^BOOST_ROOT$])
-m4trace:configure.ac:57: -1- AC_SUBST([DISTCHECK_CONFIGURE_FLAGS], ["$DISTCHECK_CONFIGURE_FLAGS '--with-boost=$with_boost'"])
-m4trace:configure.ac:57: -1- AC_SUBST_TRACE([DISTCHECK_CONFIGURE_FLAGS])
-m4trace:configure.ac:57: -1- m4_pattern_allow([^DISTCHECK_CONFIGURE_FLAGS$])
-m4trace:configure.ac:57: -1- m4_pattern_allow([^BOOST_VERSION$])
-m4trace:configure.ac:57: -1- AC_SUBST([BOOST_CPPFLAGS], ["-I$boost_cv_inc_path"])
+m4trace:configure.ac:57: -1- AC_SUBST([BOOST_CPPFLAGS])
 m4trace:configure.ac:57: -1- AC_SUBST_TRACE([BOOST_CPPFLAGS])
 m4trace:configure.ac:57: -1- m4_pattern_allow([^BOOST_CPPFLAGS$])
+m4trace:configure.ac:57: -1- AC_SUBST([BOOST_LDFLAGS])
+m4trace:configure.ac:57: -1- AC_SUBST_TRACE([BOOST_LDFLAGS])
+m4trace:configure.ac:57: -1- m4_pattern_allow([^BOOST_LDFLAGS$])
 m4trace:configure.ac:57: -1- AC_DEFINE_TRACE_LITERAL([HAVE_BOOST])
 m4trace:configure.ac:57: -1- m4_pattern_allow([^HAVE_BOOST$])
-m4trace:configure.ac:57: -1- AH_OUTPUT([HAVE_BOOST], [/* Defined if the requested minimum BOOST version is satisfied */
+m4trace:configure.ac:57: -1- AH_OUTPUT([HAVE_BOOST], [/* define if the Boost library is available */
 @%:@undef HAVE_BOOST])
-m4trace:configure.ac:57: -1- m4_pattern_allow([^BOOST_LIB_VERSION$])
-m4trace:configure.ac:59: -1- AC_DEFINE_TRACE_LITERAL([HAVE_BOOST_REGEX_HPP])
-m4trace:configure.ac:59: -1- m4_pattern_allow([^HAVE_BOOST_REGEX_HPP$])
-m4trace:configure.ac:59: -1- AH_OUTPUT([HAVE_BOOST_REGEX_HPP], [/* Define to 1 if you have <boost/regex.hpp> */
-@%:@undef HAVE_BOOST_REGEX_HPP])
-m4trace:configure.ac:59: -1- AC_SUBST([BOOST_REGEX_LDFLAGS], [$Boost_lib_LDFLAGS])
-m4trace:configure.ac:59: -1- AC_SUBST_TRACE([BOOST_REGEX_LDFLAGS])
-m4trace:configure.ac:59: -1- m4_pattern_allow([^BOOST_REGEX_LDFLAGS$])
-m4trace:configure.ac:59: -1- AC_SUBST([BOOST_REGEX_LDPATH], [$Boost_lib_LDPATH])
-m4trace:configure.ac:59: -1- AC_SUBST_TRACE([BOOST_REGEX_LDPATH])
-m4trace:configure.ac:59: -1- m4_pattern_allow([^BOOST_REGEX_LDPATH$])
-m4trace:configure.ac:59: -1- AC_SUBST([BOOST_LDPATH], [$Boost_lib_LDPATH])
-m4trace:configure.ac:59: -1- AC_SUBST_TRACE([BOOST_LDPATH])
-m4trace:configure.ac:59: -1- m4_pattern_allow([^BOOST_LDPATH$])
-m4trace:configure.ac:59: -1- AC_SUBST([BOOST_REGEX_LIBS], [$Boost_lib_LIBS])
-m4trace:configure.ac:59: -1- AC_SUBST_TRACE([BOOST_REGEX_LIBS])
-m4trace:configure.ac:59: -1- m4_pattern_allow([^BOOST_REGEX_LIBS$])
-m4trace:configure.ac:60: -1- AC_DEFINE_TRACE_LITERAL([HAVE_BOOST_PROGRAM_OPTIONS_HPP])
-m4trace:configure.ac:60: -1- m4_pattern_allow([^HAVE_BOOST_PROGRAM_OPTIONS_HPP$])
-m4trace:configure.ac:60: -1- AH_OUTPUT([HAVE_BOOST_PROGRAM_OPTIONS_HPP], [/* Define to 1 if you have <boost/program_options.hpp> */
-@%:@undef HAVE_BOOST_PROGRAM_OPTIONS_HPP])
-m4trace:configure.ac:60: -1- AC_SUBST([BOOST_PROGRAM_OPTIONS_LDFLAGS], [$Boost_lib_LDFLAGS])
-m4trace:configure.ac:60: -1- AC_SUBST_TRACE([BOOST_PROGRAM_OPTIONS_LDFLAGS])
-m4trace:configure.ac:60: -1- m4_pattern_allow([^BOOST_PROGRAM_OPTIONS_LDFLAGS$])
-m4trace:configure.ac:60: -1- AC_SUBST([BOOST_PROGRAM_OPTIONS_LDPATH], [$Boost_lib_LDPATH])
-m4trace:configure.ac:60: -1- AC_SUBST_TRACE([BOOST_PROGRAM_OPTIONS_LDPATH])
-m4trace:configure.ac:60: -1- m4_pattern_allow([^BOOST_PROGRAM_OPTIONS_LDPATH$])
-m4trace:configure.ac:60: -1- AC_SUBST([BOOST_LDPATH], [$Boost_lib_LDPATH])
-m4trace:configure.ac:60: -1- AC_SUBST_TRACE([BOOST_LDPATH])
-m4trace:configure.ac:60: -1- m4_pattern_allow([^BOOST_LDPATH$])
-m4trace:configure.ac:60: -1- AC_SUBST([BOOST_PROGRAM_OPTIONS_LIBS], [$Boost_lib_LIBS])
-m4trace:configure.ac:60: -1- AC_SUBST_TRACE([BOOST_PROGRAM_OPTIONS_LIBS])
-m4trace:configure.ac:60: -1- m4_pattern_allow([^BOOST_PROGRAM_OPTIONS_LIBS$])
-m4trace:configure.ac:61: -1- AC_DEFINE_TRACE_LITERAL([HAVE_BOOST_IOSTREAMS_DEVICE_FILE_DESCRIPTOR_HPP])
-m4trace:configure.ac:61: -1- m4_pattern_allow([^HAVE_BOOST_IOSTREAMS_DEVICE_FILE_DESCRIPTOR_HPP$])
-m4trace:configure.ac:61: -1- AH_OUTPUT([HAVE_BOOST_IOSTREAMS_DEVICE_FILE_DESCRIPTOR_HPP], [/* Define to 1 if you have <boost/iostreams/device/file_descriptor.hpp> */
-@%:@undef HAVE_BOOST_IOSTREAMS_DEVICE_FILE_DESCRIPTOR_HPP])
-m4trace:configure.ac:61: -1- AC_SUBST([BOOST_IOSTREAMS_LDFLAGS], [$Boost_lib_LDFLAGS])
-m4trace:configure.ac:61: -1- AC_SUBST_TRACE([BOOST_IOSTREAMS_LDFLAGS])
-m4trace:configure.ac:61: -1- m4_pattern_allow([^BOOST_IOSTREAMS_LDFLAGS$])
-m4trace:configure.ac:61: -1- AC_SUBST([BOOST_IOSTREAMS_LDPATH], [$Boost_lib_LDPATH])
-m4trace:configure.ac:61: -1- AC_SUBST_TRACE([BOOST_IOSTREAMS_LDPATH])
-m4trace:configure.ac:61: -1- m4_pattern_allow([^BOOST_IOSTREAMS_LDPATH$])
-m4trace:configure.ac:61: -1- AC_SUBST([BOOST_LDPATH], [$Boost_lib_LDPATH])
-m4trace:configure.ac:61: -1- AC_SUBST_TRACE([BOOST_LDPATH])
-m4trace:configure.ac:61: -1- m4_pattern_allow([^BOOST_LDPATH$])
-m4trace:configure.ac:61: -1- AC_SUBST([BOOST_IOSTREAMS_LIBS], [$Boost_lib_LIBS])
-m4trace:configure.ac:61: -1- AC_SUBST_TRACE([BOOST_IOSTREAMS_LIBS])
-m4trace:configure.ac:61: -1- m4_pattern_allow([^BOOST_IOSTREAMS_LIBS$])
+m4trace:configure.ac:59: -1- AC_DEFINE_TRACE_LITERAL([HAVE_BOOST_REGEX])
+m4trace:configure.ac:59: -1- m4_pattern_allow([^HAVE_BOOST_REGEX$])
+m4trace:configure.ac:59: -1- AH_OUTPUT([HAVE_BOOST_REGEX], [/* define if the Boost::Regex library is available */
+@%:@undef HAVE_BOOST_REGEX])
+m4trace:configure.ac:59: -1- AC_SUBST([BOOST_REGEX_LIB])
+m4trace:configure.ac:59: -1- AC_SUBST_TRACE([BOOST_REGEX_LIB])
+m4trace:configure.ac:59: -1- m4_pattern_allow([^BOOST_REGEX_LIB$])
+m4trace:configure.ac:59: -1- AC_SUBST([BOOST_REGEX_LIB])
+m4trace:configure.ac:59: -1- AC_SUBST_TRACE([BOOST_REGEX_LIB])
+m4trace:configure.ac:59: -1- m4_pattern_allow([^BOOST_REGEX_LIB$])
+m4trace:configure.ac:59: -1- AC_SUBST([BOOST_REGEX_LIB])
+m4trace:configure.ac:59: -1- AC_SUBST_TRACE([BOOST_REGEX_LIB])
+m4trace:configure.ac:59: -1- m4_pattern_allow([^BOOST_REGEX_LIB$])
+m4trace:configure.ac:60: -1- AC_DEFINE_TRACE_LITERAL([HAVE_BOOST_PROGRAM_OPTIONS])
+m4trace:configure.ac:60: -1- m4_pattern_allow([^HAVE_BOOST_PROGRAM_OPTIONS$])
+m4trace:configure.ac:60: -1- AH_OUTPUT([HAVE_BOOST_PROGRAM_OPTIONS], [/* define if the Boost::PROGRAM_OPTIONS library is available */
+@%:@undef HAVE_BOOST_PROGRAM_OPTIONS])
+m4trace:configure.ac:60: -1- AC_SUBST([BOOST_PROGRAM_OPTIONS_LIB])
+m4trace:configure.ac:60: -1- AC_SUBST_TRACE([BOOST_PROGRAM_OPTIONS_LIB])
+m4trace:configure.ac:60: -1- m4_pattern_allow([^BOOST_PROGRAM_OPTIONS_LIB$])
+m4trace:configure.ac:60: -1- AC_SUBST([BOOST_PROGRAM_OPTIONS_LIB])
+m4trace:configure.ac:60: -1- AC_SUBST_TRACE([BOOST_PROGRAM_OPTIONS_LIB])
+m4trace:configure.ac:60: -1- m4_pattern_allow([^BOOST_PROGRAM_OPTIONS_LIB$])
+m4trace:configure.ac:60: -1- AC_SUBST([BOOST_PROGRAM_OPTIONS_LIB])
+m4trace:configure.ac:60: -1- AC_SUBST_TRACE([BOOST_PROGRAM_OPTIONS_LIB])
+m4trace:configure.ac:60: -1- m4_pattern_allow([^BOOST_PROGRAM_OPTIONS_LIB$])
+m4trace:configure.ac:61: -1- AC_DEFINE_TRACE_LITERAL([HAVE_BOOST_IOSTREAMS])
+m4trace:configure.ac:61: -1- m4_pattern_allow([^HAVE_BOOST_IOSTREAMS$])
+m4trace:configure.ac:61: -1- AH_OUTPUT([HAVE_BOOST_IOSTREAMS], [/* define if the Boost::IOStreams library is available */
+@%:@undef HAVE_BOOST_IOSTREAMS])
+m4trace:configure.ac:61: -1- AC_SUBST([BOOST_IOSTREAMS_LIB])
+m4trace:configure.ac:61: -1- AC_SUBST_TRACE([BOOST_IOSTREAMS_LIB])
+m4trace:configure.ac:61: -1- m4_pattern_allow([^BOOST_IOSTREAMS_LIB$])
+m4trace:configure.ac:61: -1- AC_SUBST([BOOST_IOSTREAMS_LIB])
+m4trace:configure.ac:61: -1- AC_SUBST_TRACE([BOOST_IOSTREAMS_LIB])
+m4trace:configure.ac:61: -1- m4_pattern_allow([^BOOST_IOSTREAMS_LIB$])
+m4trace:configure.ac:61: -1- AC_SUBST([BOOST_IOSTREAMS_LIB])
+m4trace:configure.ac:61: -1- AC_SUBST_TRACE([BOOST_IOSTREAMS_LIB])
+m4trace:configure.ac:61: -1- m4_pattern_allow([^BOOST_IOSTREAMS_LIB$])
 m4trace:configure.ac:63: -1- _m4_warn([cross], [cannot check for file existence when cross compiling], [../../lib/autoconf/general.m4:2777: AC_CHECK_FILE is expanded from...
 configure.ac:63: the top level])
 m4trace:configure.ac:63: -1- AC_SUBST([PATCH])
